增加102报告的表单附加单选框、分支机构（单选加文本框）、登记变更情况（单选加表格）3种模块类型；抽取部分常量到common.js

--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -92,6 +92,16 @@
             }
 
         }
+        /*102类型*/
+        @media all {
+            [type=radio]{
+                position: relative;
+                top: .25rem;
+                margin-left: 1rem;
+                margin-right: .25rem;
+                pointer-events:none;
+            }
+        }
     </style>
 </head>
 
@@ -149,16 +159,15 @@
         </div>
     </div>
 </div>
-
 <script src="${BASE_PATH }static/credit/js/order_manage/order_common.js"></script>
 <script src="${BASE_PATH }static/credit/js/order_manage/order_detail.js"></script>
 
 <script>
-
-
     $(function () {
-
+        // alert(1)
     })
+
+
 
 
 </script>
