--- a/src/main/webapp/pages/credit/usercenter/index.html
+++ b/src/main/webapp/pages/credit/usercenter/index.html
@@ -56,7 +56,7 @@
                             <form id="formSearch" class="form-inline layui-form" role="form">
                                 <div class="form-group row d-flex justify-content-around mb-2">
                                     <div class="input-group mt-2 col-md-4">
-                                        <label class="control-label col-md-4" for="txt_search_departmentname">公司名称：</label>
+                                        <label class="control-label col-md-4" for="txt_search_departmentname">公司中文名称：</label>
                                         <input  type="text" class="form-control search-input col-md-8" id="txt_search_departmentname" placeholder="请输入公司名称">
                                     </div>
                                     <div class="input-group mt-2 col-md-4">
@@ -70,7 +70,7 @@
                                 </div>
                                 <div id="btnCollapse" class="show row justify-content-around">
                                     <div class="input-group mt-2 col-md-4 " id="client">
-                                        <label class="control-label col-md-4" for="txt_search_statu">客户：</label>
+                                        <label class="control-label col-md-4" for="txt_search_statu">客户ID：</label>
                                         <select id="custom_id" name='attr.custom_id' class="search-input col-md-8 layui-input">
                                             <option value="" disabled selected>请选择客户</option>
                                           
@@ -88,6 +88,16 @@
                                         <select id="country" name='attr.country' class="search-input col-md-8 layui-input" lay-search="" ay-verify="">
                                             <option value="" disabled selected>请选择国家</option>
                                         </select>
+                                    </div>
+                                    </div>
+                                    <div id="btnCollap" class="show row ">
+                                    <div class="input-group mt-2 col-md-4" >
+                                        <label class="control-label col-md-4" for="txt_search_departmentname">订单编号：</label>
+                                        <input id="num" type="text" class="form-control search-input col-md-8"  placeholder="请输入订单编号">
+                                    </div>
+                                    <div class="input-group mt-2 col-md-4" >
+                                        <label class="control-label col-md-4" for="txt_search_departmentname">客户参考号：</label>
+                                        <input id="reference_num" type="text" class="form-control search-input col-md-8"  placeholder="请输入客户参考号">
                                     </div>
                                 </div>
                             </form>
