--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -31,7 +31,7 @@
                 visibility: hidden;
             }
 
-            .guDongSubTitle,h4{
+            .guDongSubTitle, h4 {
                 margin: 2rem 0 0 2rem;
                 font-size: 1.125rem;
                 font-weight: bold;
@@ -78,28 +78,51 @@
                 color: var(--fontColor);
                 font-weight: normal;
             }
-            h4{
+
+            h4 {
                 margin-top: 1rem;
             }
-            .type8-content ul{
+
+            .type8-content ul {
                 padding-left: 1rem;
                 color: var(--fontColor);
             }
-            .type8-content ul>li{
+
+            .type8-content ul > li {
                 display: inline-block;
                 margin: 1rem;
                 margin-right: .5rem;
             }
 
         }
+
         /*102类型*/
         @media all {
-            [type=radio]{
+            [type=radio] {
                 position: relative;
                 top: .25rem;
                 margin-left: 1rem;
                 margin-right: .25rem;
-                pointer-events:none;
+                pointer-events: none;
+            }
+        }
+
+        /*质检类型的表单*/
+        @media all {
+            .type23-content{
+                color: var(--fontTitleColor);
+            }
+            .type23-content #grade {
+                display: inline;
+                width: 3rem;
+                text-align: right;
+                font-size: 1.5rem;
+                font-weight: bold;
+                color: var(--activeColor);
+            }
+            .type23-content .unit {
+                font-size: 1rem;
+                margin-left: .25rem;
             }
         }
     </style>
@@ -129,29 +152,6 @@
         <!-- 内容展示 -->
         <div class="table-content">
             <!-- 基本信息 -->
-<!--
-            <div class="module-wrap bg-f company-info mb-4" id="274">
-                <div class="l-title">付款情况</div>
-                <div class="type8-content">
-                    <h4>总体评价</h4>
-                    <ul class="">
-                        <li>（<span>√</span>）极好</li>
-                        <li>（<span>√</span>）好</li>
-                        <li>（<span>√</span>）一般</li>
-                        <li>（<span>√</span>）较差</li>
-                        <li>（<span>√</span>）差</li>
-                        <li>（<span>√</span>）尚无法评估</li>
-                    </ul>
-                    <h4>拖欠记录</h4>
-                    <div class="border multiText m-4 p-2"></div>
-                    <h4>追讨记录</h4>
-                    <div class="border multiText m-4 p-2"></div>
-                </div>
-                &lt;!&ndash;<div class="pt-1"></div>&ndash;&gt;
-
-            </div>
--->
-
             <!-- 流程进度 -->
             <!-- 基本报告 -->
             <!-- 附件-->
@@ -166,8 +166,6 @@
     $(function () {
         // alert(1)
     })
-
-
 
 
 </script>
