--- a/src/main/webapp/pages/credit/common/menu.html
+++ b/src/main/webapp/pages/credit/common/menu.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/bootstrap-table/css/bootstrap-table.min.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/bootstrap-table/css/bootstrap-table-fixed-columns.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/animate/animate.css">
+    <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/loadingMaster/jquery.mloading.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/reset.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/common.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/menu.css">
@@ -200,6 +201,7 @@
      <script src="${BASE_PATH }static/credit/assets/echarts/echarts-liquidfill.js"></script>
      <script src="${BASE_PATH }static/credit/assets/echarts/world.js"></script>
     <script src="${BASE_PATH }static/credit/js/chartsCom.js"></script>
+    <script src="${BASE_PATH }static/credit/assets/loadingMaster/jquery.mloading.js"></script>
  <!-- 动态配置js -->
     <script src="${BASE_PATH }static/credit/js/report_config/initHtml.js"></script>
 </body>
