修改工作台，全部订单收起筛选条件框，增加订单查档国内外全部，已分配，未分配按钮

--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -57,7 +57,8 @@
                                 <input type="text" class="form-control search-input col-md-8" id="txt_search_date" placeholder="请选择到期日期"">
                             </div>
                         </div>
-                        <div id="btnCollapse" class="show row justify-content-around">
+                        <div id="btnCollapse" style="width:100%">
+                        <div id="" class="show row justify-content-around">
                             <div class="input-group mt-2 col-md-4 " id="client">
                                 <label class="control-label col-md-4" for="txt_search_cus">客户ID：</label>
                                 <select class="search-input col-md-8 layui-input" id="txt_search_cus"  name='attr.custom_id'>
@@ -88,6 +89,7 @@
                                         <input id="reference_num" type="text" class="form-control search-input col-md-8"  placeholder="请输入客户参考号">
                                     </div>
                                 </div>
+                           </div>
                     </form>
                     <div class="btn-row d-flex justify-content-between mt-3 mb-3">
                         <a role="button" class=" ml-5 d-flex align-items-center" href="javascript:;"></a>
