--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
@@ -39,6 +39,11 @@
                 <div class="table-content">
                     <div class="bg-f pt-4">
                     	<button class="btn btn-primary mx-5" id="dl_btn" data-toggle="modal" data-target="#exampleModalCenter_allocation2"> 批量分配</button>
+                    	 <button class="btn btn-primary mx-3" id="dl_btn1" data-toggle="modal" data-target="#"modal style="float:right" > 未分配</button>
+                         <button class="btn btn-primary mx-3" id="dl_btn2" data-toggle="modal" data-target="#modal" style="float:right" > 已分配</button>
+                        <button class="btn btn-primary mx-3" id="dl_btn3" data-toggle="modal" data-target="#modal" style="float:right"> 全部订单</button>
+                       
+                       
                         <table id="table"
                             data-toggle="table"
                             data-url="./data.json"
