--- a/src/main/webapp/pages/credit/usercenter/index.html
+++ b/src/main/webapp/pages/credit/usercenter/index.html
@@ -68,7 +68,8 @@
                                         <input id="dead_date" type="text" class="form-control search-input col-md-8"  placeholder="请选择到期日期"">
                                     </div>
                                 </div>
-                                <div id="btnCollapse" class="show row justify-content-around">
+                                <div id="btnCollapse" style="width:100%">
+                                <div id="" class="show row justify-content-around">
                                     <div class="input-group mt-2 col-md-4 " id="client">
                                         <label class="control-label col-md-4" for="txt_search_statu">客户ID：</label>
                                         <select id="custom_id" name='attr.custom_id' class="search-input col-md-8 layui-input">
@@ -91,15 +92,16 @@
                                     </div>
                                     </div>
                                     <div id="btnCollap" class="show row ">
-                                    <div class="input-group mt-2 col-md-4" >
-                                        <label class="control-label col-md-4" for="txt_search_departmentname">订单编号：</label>
-                                        <input id="num" type="text" class="form-control search-input col-md-8"  placeholder="请输入订单编号">
-                                    </div>
-                                    <div class="input-group mt-2 col-md-4" >
-                                        <label class="control-label col-md-4" for="txt_search_departmentname">客户参考号：</label>
-                                        <input id="reference_num" type="text" class="form-control search-input col-md-8"  placeholder="请输入客户参考号">
-                                    </div>
-                                </div>
+	                                    <div class="input-group mt-2 col-md-4" >
+	                                        <label class="control-label col-md-4" for="txt_search_departmentname">订单编号：</label>
+	                                        <input id="num" type="text" class="form-control search-input col-md-8"  placeholder="请输入订单编号">
+	                                    </div>
+	                                    <div class="input-group mt-2 col-md-4" >
+	                                        <label class="control-label col-md-4" for="txt_search_departmentname">客户参考号：</label>
+	                                        <input id="reference_num" type="text" class="form-control search-input col-md-8"  placeholder="请输入客户参考号">
+	                                    </div>
+                               		 </div>
+                               	</div>
                             </form>
                             <div class="btn-row d-flex justify-content-between mt-3 mb-3">
                                 <a role="button" class="btn btn-primary ml-5 d-flex align-items-center" href="javascript:;" onclick="Public.createOrder()"><i class="fa fa-plus pr-2"></i>新增订单</a>
