--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -43,7 +43,7 @@
             <div class="bg-f">
                 <div class="form-box">
                     <form id="formSearch" class="form-inline layui-form" role="form">
-                        <div class="form-group row d-flex justify-content-around mb-3">
+                        <div class="form-group row d-flex justify-content-around">
                             <div class="input-group mt-2 col-md-4">
                                 <label class="control-label col-md-4" for="txt_search_departmentname">公司中文名称：</label>
                                 <input type="text" class="form-control search-input col-md-8" id="txt_search_departmentname" placeholder="请输入公司名称">
