修改工作台，全部订单，下拉客户

--- a/src/main/webapp/pages/credit/usercenter/all_orders.html
+++ b/src/main/webapp/pages/credit/usercenter/all_orders.html
@@ -64,7 +64,7 @@
                                 <select class="search-input col-md-8 layui-input" id="txt_search_cus"  name='attr.custom_id'>
                                     <option value="" disabled selected>请选择客户</option>
                                     <% for(cu in customer){ %>
-                                   <option value="${cu.id}">${cu.name}</option>
+                                   <option value="${cu.id}">${cu.id}</option>
                                   <% } %>  
                                 </select>
                             </div>
