--- a/src/main/webapp/pages/credit/usercenter/index.html
+++ b/src/main/webapp/pages/credit/usercenter/index.html
@@ -75,7 +75,7 @@
                                         <select id="custom_id" name='attr.custom_id' class="search-input col-md-8 layui-input">
                                             <option value="" disabled selected>请选择客户</option>
                                           <% for(cu in customer){ %>
-                                   <option value="${cu.id}">${cu.name}</option>
+                                   <option value="${cu.id}">${cu.id}</option>
                                   <% } %>  
                                         </select>
                                     </div>
