填报语言的相应处理

--- a/src/main/webapp/pages/credit/usercenter/index.html
+++ b/src/main/webapp/pages/credit/usercenter/index.html
@@ -25,7 +25,7 @@
                 <!-- 个人信息 -->
                 <div class="user-order d-flex justify-content-between align-items-center">
                     <div class="user-info d-flex flex-column justify-content-center">
-                        <p class="regards mb-1">早安，<span id="name"></span>，祝你开心每一天！</p>
+                        <p class="regards mb-1">你好，<span id="name"></span>，祝你开心每一天！</p>
                         <p class="job-title mt-2">                            
                             <span id="role"></span>
                              <span id="company"></span>
