订单统计样式修改

--- a/src/main/webapp/pages/credit/usercenter/total_manage/total_order.html
+++ b/src/main/webapp/pages/credit/usercenter/total_manage/total_order.html
@@ -9,6 +9,9 @@
         .total-order-top-trend {
             padding: 0.5rem 0 0 0;
         }
+        .total-order-top-title {
+            padding: 1.5rem 0 1rem 0;
+        }
         .fixed-table-container thead th .both{
             background: none;
         }
@@ -181,7 +184,7 @@
                         <div class="form-box fr">
                             <form id="formSearch1" class="form-inline layui-form" role="form">
                                 <div class="form-group row d-flex justify-content-around mt-2">
-                                    <img src="${BASE_PATH }static/credit/imgs/total_manage/calen.png" alt="" style="position: absolute;right: 20px;width: 16px;height: 18px;">
+                                    <img src="${BASE_PATH }static/credit/imgs/total_manage/calen.png" alt="" style="position: absolute;right: 28px;width: 16px;height: 18px;">
                                     <input type="text" class="form-control search-input" id="dead_date1" placeholder="请选择日期">
                                 </div>
                             </form>
@@ -198,7 +201,7 @@
                         <div class="form-box fr">
                             <form id="formSearch2" class="form-inline layui-form" role="form">
                                 <div class="form-group row d-flex justify-content-around mt-2">
-                                    <img src="${BASE_PATH }static/credit/imgs/total_manage/calen.png" alt="" style="position: absolute;right: 20px;width: 16px;height: 18px;">
+                                    <img src="${BASE_PATH }static/credit/imgs/total_manage/calen.png" alt="" style="position: absolute;right: 28px;width: 16px;height: 18px;">
                                     <input type="text" class="form-control search-input" id="dead_date2" placeholder="请选择日期">
                                 </div>
                             </form>
