客户管理优化

--- a/src/main/webapp/pages/credit/custom/custom_edit.html
+++ b/src/main/webapp/pages/credit/custom/custom_edit.html
@@ -105,16 +105,7 @@ var bodyContent = {
 					</td>
 					
 				</tr>
-				<tr>
-					<td>电话</td>
-					<td>
-					<input class="form-control" type="text" name="model.telphone" value="${model.telphone}" />
-					</td>
-					<td>email</td>
-					<td>
-					<input class="form-control" type="text" name="model.email" value="${model.email}" />
-					</td>
-				</tr>
+				
 				<tr>
 					<td>传真</td>
 					<td>
@@ -159,6 +150,12 @@ var bodyContent = {
 					<td>地址</td>
 					<td colspan="3">
 					<textarea class="form-control" rows="1" cols="20" name="model.address">${model.address}</textarea>
+					</td>
+				</tr>
+				<tr>
+					<td>邮箱</td>
+					<td colspan="3">
+					<input class="form-control" type="text" rows="1",cols="20" name="model.email" value="${model.email}" />
 					</td>
 				</tr>
 				<tr>
