代理分配下拉框代理类别获取全部 ，邮件默认发送

--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
@@ -336,8 +336,8 @@
                                     <label class="control-label col-md-4 text-right">是否发送委托邮件：</label>
                                     <select name="" id="entrust_email" class="form-control  col-md-6">
                                         <!--默认 是-->
-                                        <option value="1" >是</option>
-                                        <option value="-1" selected>否</option>
+                                        <option value="1" selected>是</option>
+                                        <option value="-1" >否</option>
                                     </select>
                                 </div>
                                
@@ -372,8 +372,8 @@
                                     <label class="control-label col-md-4 text-right">是否发送委托邮件：</label>
                                     <select name="email" id="entrust_email" class="form-control  col-md-6">
                                         <!--默认 是-->
-                                        <option value="1" >是</option>
-                                        <option value="-1" selected>否</option>
+                                        <option value="1" selected>是</option>
+                                        <option value="-1" >否</option>
                                     </select>
                                 </div>
                                
