--- a/src/main/webapp/pages/credit/usercenter/report_pages/report_order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/report_pages/report_order_filing.html
@@ -320,7 +320,7 @@
                             <div class="row mt-3 mb-2">
                                 <div class="input-group col-md-6 align-items-center">
                                     <label class="control-label col-md-4 text-right">代理ID：</label>
-                                    <select name="" id="agency_id" class="form-control  col-md-6" onchange="agentchange()">
+                                    <select name="" id="agency_id" class="form-control  col-md-6" >
                                        <option value="-1">请选择</option>
                                     </select>
                                 </div>
