--- a/src/main/webapp/pages/credit/custom/custom_edit.html
+++ b/src/main/webapp/pages/credit/custom/custom_edit.html
@@ -87,7 +87,7 @@ var bodyContent = {
 					</td> -->
 					<td>
 						<div class="form-group">
-						<select name="model.company_id" class="form-control" valid="vselect" validname="公司名称">
+						<select name="model.company_id" class="form-control" >
 						<option value="-1" >请选择</option>
 						 <% for(item in company){ %>
 						 	<% if((model.company_id+"")==(item.id+"")){ %>
