--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_filing.html
@@ -364,12 +364,13 @@
         <div class="modal  fade" id="exampleModalCenter_allocation2" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
            
             <div class="modal-dialog modal-dialog-centered" role="document">
-            	 <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-                </div>
+
                 <div class="modal-content" style="min-height: 19.75rem">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close" style="float: right">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
                       <div class="file-upload">
                             <div class="row mt-3 mb-2">
                                 <div class="input-group col-md-6 align-items-center">
