下拉框样式，分析页面的判断

--- a/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
+++ b/src/main/webapp/pages/credit/usercenter/order_manage/order_detail.html
@@ -9,6 +9,20 @@
     <link rel="stylesheet" href="${BASE_PATH }static/credit/assets/select2/css/select2.css">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_common.css?">
     <link rel="stylesheet" href="${BASE_PATH }static/credit/css/order_manage/order_detail.css">
+    <style>
+        .select2Box{
+            display: flex;
+            justify-content: space-between;
+        }
+        .select2Box label {
+            padding-left: 2rem;
+        }
+        .select2-container .select2-selection--multiple,
+        .select2-container--default.select2-container--focus .select2-selection--multiple{
+            border-color: #1890ff;
+        }
+
+    </style>
 </head>
 
 <div id="container" class="row animted fadeIn">
