工作台，质检，查档，核实个数修改

--- a/src/main/webapp/pages/credit/usercenter/index.html
+++ b/src/main/webapp/pages/credit/usercenter/index.html
@@ -37,15 +37,15 @@
                     <div class="order-info d-flex justify-content-center align-items-center ">
                         <div class="order-item pl-5 pr-5 d-flex flex-column justify-content-center align-items-center">
                             <span>核实中订单</span>
-                            <span id="orderhs">24</span>
+                            <span id="orderhs">${orderhs}</span>
                         </div>
                         <div class="order-item pl-5 pr-5 d-flex flex-column justify-content-center align-items-center">
                             <span>查档中订单</span>
-                            <span id="ordercd">89</span>
+                            <span id="ordercd">${ordercd}</span>
                         </div>
                         <div class="order-item pl-5 pr-5 d-flex flex-column justify-content-center align-items-center">
                             <span >质检中订单</span>
-                            <span id="orderzj">12</span>
+                            <span id="orderzj">${orderzj}</span>
                         </div>
                     </div>
                 </div>
