客服  订单统计

--- a/src/main/webapp/pages/credit/usercenter/total_manage/total_order_service.html
+++ b/src/main/webapp/pages/credit/usercenter/total_manage/total_order_service.html
@@ -80,7 +80,7 @@
         <div class="col bg-white">
             <header class="row justify-content-between">
                 <h3>月订单量趋势图</h3>
-                <div class="">
+                <div >
                     <div style="position: relative;display: inline-block;">
                         <img src="${BASE_PATH }static/credit/imgs/total_manage/down.png" alt="" style="position: absolute;right: 32px;width: 13px;top: 14px;height: 9px;z-index: 99">
                         <label class="control-label mt-2" for="country">国家：</label>
