--- a/src/main/webapp/pages/credit/usercenter/index.html
+++ b/src/main/webapp/pages/credit/usercenter/index.html
@@ -25,7 +25,7 @@
                 <!-- 个人信息 -->
                 <div class="user-order d-flex justify-content-between align-items-center">
                     <div class="user-info d-flex flex-column justify-content-center">
-                        <p class="regards mb-1">您好，<span id="name"></span>，祝你开心每一天！</p>
+                        <p class="regards mb-1">您好，<span id="name">w</span>，祝你开心每一天！</p>
                         <p class="job-title mt-2">                            
                             <span id="role"></span>
                              <span id="company"></span>
@@ -240,20 +240,25 @@
    <script src="${BASE_PATH }static/credit/assets/layui/layui.all.js"></script>
    <script src="${BASE_PATH }static/credit/js/index.js"></script>
    <script type="text/javascript">
-   console.log(Public)
-		$(function(){
-			$.get('/credit/front/home/getMessage',function(data){
-				$("#name").html(data.user.realname);
-				$("#role").html(data.user.roleName);
-				$("#dept").text(data.user.departName);
-				$("#company").text(data.user.companyName);
-				$("#orderhs").text(data.orderhs);
-				$("#ordercd").text(data.ordercd);
-				$("#orderzj").text(data.orderzj);
-				getCustoms(data.customs);
-				getCountry(data.country);
-			})	
-		});
+
+    console.log('111')
+        $.get('/credit/front/home/getMessage',function(data){
+            console.log('afoh')
+            alert('ddsof')
+            console.log('登录信息',data)
+            $("#name").html(data.user.realname);
+            $("#role").html(data.user.roleName);
+            $("#dept").text(data.user.departName);
+            $("#company").text(data.user.companyName);
+            $("#orderhs").text(data.orderhs);
+            $("#ordercd").text(data.ordercd);
+            $("#orderzj").text(data.orderzj);
+            getCustoms(data.customs);
+            getCountry(data.country);
+        })
+
+
+
 		function getCustoms(data){
 			console.log(data);
 			var html=""
