--- a/src/main/webapp/pages/credit/common/menu.html
+++ b/src/main/webapp/pages/credit/common/menu.html
@@ -204,6 +204,8 @@
     <script src="${BASE_PATH }static/credit/assets/loadingMaster/jquery.mloading.js"></script>
  <!-- 动态配置js -->
     <script src="${BASE_PATH }static/credit/js/report_config/initHtml.js"></script>
+    <script src="${BASE_PATH }static/credit/js/analyze/initHtml.js"></script>
     <script src="${BASE_PATH }static/credit/js/translate/initHtml.js"></script>
+    <script src="${BASE_PATH }static/credit/js/translate_quality/initHtml.js"></script>
 </body>
 </html>
